k8s/deployment-stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-vault-deployment-stage
  labels:
    app: cloud-vault-client
    stage: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-vault-client
      stage: staging
  template:
    metadata:
      labels:
        app: cloud-vault-client
        stage: staging
    spec:
      containers:
      - name: cloud-vault-client-dev-1
        image: ayushh09316/cloud-vault-dev:v1.0
        ports:
        - containerPort: 3000  # Match this to the container's exposed port (3000 for dev)
