k8s/service-stage.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-stage
  labels:
    app: cloud-vault-client
spec:
  selector:
    app: cloud-vault-client
    stage: staging
  ports:
    - protocol: TCP
      port: 3000           # Exposed port on the Service for staging
      targetPort: 3000     # Port in the container for staging
  type: ClusterIP       # Change to LoadBalancer or NodePort for external access
